# pdemo

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog.txt  README.md  README.txt  config.h.cmake  index.html  pdemo.c  pdemo_chown.cmake  pdemo_deb.ctrl  pdemo_deb.postinst  pdemo_en.1  pdemo_fr.1  pdemo_install.sh  pdip.c  pdip_deb.ctrl  pdip_deb.postinst  pdip_en.1  pdip_fr.1  pdip_install.sh  version.cmake
